--- a/app/views/board_templates/index.html.erb
+++ b/app/views/board_templates/index.html.erb
@@ -20,3 +20,14 @@
     <% end %>
   </ul>
 </article>
+
+<article>
+  <header>Add a new board</header>
+
+  <form action="/insert_board" method="post">
+    <label for="name_field">Name</label>
+    <input id="name_field" type="text" name="name_param" placeholder="Enter a name for your board...">
+
+    <button>Create board</button>
+  </form>
+</article>
