Users can add boards

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,10 @@
 
     <main>
       <div class="container-two-thirds">
+        <div class="text-success">
+          <%= notice %>
+        </div>
+        
         <%= yield %>
       </div>
     </main>
