--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,11 @@
         <div class="text-success">
           <%= notice %>
         </div>
-        
+
+        <div class="text-danger">
+          <%= alert %>
+        </div>
+
         <%= yield %>
       </div>
     </main>
