Fixed broken form label. All tests now pass!

--- a/app/views/board_templates/show.html.erb
+++ b/app/views/board_templates/show.html.erb
@@ -56,7 +56,7 @@
   <header>Add a new listing</header>
 
   <form action="/insert_listing" method="post">
-    <label for="title_field">Title<label>
+    <label for="title_field">Title</label>
     <input id="title_field" type="text" name="title_param">
 
     <label for="body_field">Body</label>
